fixed secondary column spacing issue

--- a/css/cardsort.css
+++ b/css/cardsort.css
@@ -2,32 +2,37 @@
 #hamburger{
 	padding-right: 10px;
 }
-
+#dropZonesPlace{
+	height: 100%;
+	width: auto;
+	overflow: auto;
+	background-color: rgb(0, 107, 132);
+}
 /*Group Drop Areas*/
 .column-area-primary {
 	float: left;
-	width: auto;
-	min-height: 100%;
+	height: 100%;
 	min-width: 200px;
 	background-color: rgb(0,158,195);
 	padding:10px;
+	float: clear;
+	border: solid 2px white;
 }
 .column-area-secondary {
 	float: left;
-	width: auto;
-	min-height: 100%;
-	min-width: 200px;
-	background-color: rgb(0,130,160);
+	height: 100%;
+	min-height: 200px;
+	min-width: 20%;
+	background-color: rgb(0, 107, 132);
 }
 
 /*Groups*/
 .group {
 	width: auto;
 	color: black;
-	max-width: 200px;
 	min-height: 150px;
 	background-color: rgb(219,221,224);
-	margin: 10px;
+	margin: 15px;
 	border-radius: 4px;	
     word-wrap: break-word;
     cursor: move;
@@ -68,7 +73,7 @@
 .item {
 	width: auto;
 	cursor: move;
-	max-width: 200px;
+	/*max-width: 200px;*/
 	color: black;
 	background-color: white;
 	cursor: grab;	
